@@ -2,6 +2,7 @@ CHANGELOG Roundcube Webmail
 ===========================
 
 - Make SMTP error log more verbose - include server response and error code
+- Fix security issue in DBMail driver of password plugin (#1490261)
 
 RELEASE 1.0.5
 -------------
